--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
     env:
       ELEVEN_LABS_API_KEY: ${{ secrets.ELEVEN_LABS_API_KEY }}
     steps:
-      - name: Checkout Repository
+      - name: Checkout Repository 🛎️
         uses: actions/checkout@v4
       - name: Detect package manager
         id: detect-package-manager
@@ -39,7 +39,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "14"
+          node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
@@ -49,7 +49,6 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./build
-  # Deployment job
   deploy:
     environment:
       name: github-pages
@@ -57,6 +56,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages 🚀
         id: deployment
         uses: actions/deploy-pages@v3
