--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rm -rf build && rm -rf node_modules && rm -f package-lock.json && rm -f yarn.lock && npm cache clean --force"
   },
   "eslintConfig": {
     "extends": [
