--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY }}
+      REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
     steps:
       - uses: actions/checkout@v4
 
